[package]
name = "tower-hyper-http-body-compat"
version = "0.1.1"
description = "Adapters between hyper 0.14-1.0, http-body 0.4-1.0, and tower-service 0.3."
edition = "2021"
homepage = "https://github.com/davidpdrsn/tower-hyper-http-body-compat"
keywords = ["http", "hyper", "tower", "axum"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/davidpdrsn/tower-hyper-http-body-compat"

[features]
default = []
http1 = ["hyper-1/http1"]
http2 = ["hyper-1/http2"]
server = ["hyper-1/server"]
client = ["hyper-1/client"]

[dependencies]
http = "0.2.9"
http-body-04 = { package = "http-body", version = "0.4" }
http-body-1 = { package = "http-body", version = "1.0.0-rc.2" } # remember to update README.md
hyper-1 = { package = "hyper", version = "1.0.0-rc.3" } # remember to update README.md
pin-project-lite = "0.2.9"
tower = { version = "0.4", features = ["util"] }
tower-service-03 = { package = "tower-service", version = "0.3" }

[dev-dependencies]
axum = "0.6"
bytes = "1.0"
hyper-014 = { package = "hyper", version = "0.14", features = ["full"] }
hyper-1 = { package = "hyper", version = "1.0.0-rc.3", features = ["full"] }
http-body-util = "0.1.0-rc.2"
tokio = { version = "1.0", features = ["full"] }
tower = { version = "0.4", features = ["full", "make"] }
tower-http = { version = "0.4", features = [
    "map-request-body",
    "map-response-body",
    "util",
    "trace",
] }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[package.metadata.cargo-public-api-crates]
allowed = [
    "http",
    "http_body",
    "hyper",
    "tower_service",
]
